ecmascript/parser/tests/test262-error-references/fail/7974c69bdfcceea8.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/7974c69bdfcceea8.js:1:3
  |
1 | ({get a(){}}) => 0;
  |   ^^^^^^^^^

